force-app/main/default/objects/Imerys_Site__c/fields/Imerys_Selling_Entity__c.field-meta.xml
<CustomField>
    <fullName>Imerys_Selling_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Imerys Selling Entity</label>
    <referenceTo>Imerys_Site__c</referenceTo>
    <relationshipLabel>Imerys Sites</relationshipLabel>
    <relationshipName>Imerys_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>