force-app/main/default/objects/Imerys_Site__c/fields/Selling_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>Selling_Entity_Code__c</fullName>
    <externalId>true</externalId>
    <label>Selling Entity Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>