force-app/main/default/objects/Imerys_Site__c/fields/Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Code__c</fullName>
    <externalId>true</externalId>
    <label>Site Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>