force-app/main/default/objects/Imerys_Site__c/fields/Standard_Terms_Conditions_of_Sales_L__c.field-meta.xml
<CustomField>
    <fullName>Standard_Terms_Conditions_of_Sales_L__c</fullName>
    <label>General Terms of Supply and Delivery</label>
    <type>Url</type>
</CustomField>